feat: form builder with better validation